--- a/src/Home.css
+++ b/src/Home.css
@@ -2,6 +2,7 @@
   width: 100%;
   /* position: relative;
   z-index: 0; */
+  margin-top: -150px;
   margin-bottom: -150px;
   -webkit-mask-image: linear-gradient(
     to bottom,
@@ -41,11 +42,6 @@
   /* max-height: fit-content; */
 }
 
-/* .wrapper div img {
-  max-width: 80%;
-  max-height: 80%;
-} */
-
 .wrapper div:nth-child(2) {
   grid-column: 3 / span 2;
   grid-row: 2 / span 2;
@@ -58,6 +54,12 @@
   grid-column: 1 / span 2;
   grid-row: 4 / span 2;
 }
-.wrapper div:nth-child(4) {
+/* .wrapper div:nth-child(4) {
+  grid-column: span 2;
+  grid-row: span 2; 
+} */
+
+.wrapper div:nth-child(12) {
+  grid-column: span 2;
   grid-row: span 2;
 }
