--- a/src/Product.css
+++ b/src/Product.css
@@ -12,7 +12,7 @@
 .product {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
   min-width: 100px;
   height: 100%;
@@ -27,11 +27,10 @@
 
 .product > img {
   width: 100%;
-  margin: auto;
+  margin: 0px;
 }
 
 .product__info {
-  height: 20%;
   width: 100%;
   margin-bottom: 15px;
 }
@@ -47,4 +46,13 @@
   margin-top: 10px;
   border-color: #a88734 #9c7e31 #846a29;
   color: #111;
+}
+
+.product__title {
+  font-size: 14px;
+  text-overflow: ellipsis; /* will make [...] at the end */
+  width: 30ch; /* change to your preferences */
+
+  white-space: nowrap; /* paragraph to one line */
+  overflow: hidden; /* older browsers */
 }
