--- a/src/Checkout.css
+++ b/src/Checkout.css
@@ -1,8 +1,13 @@
 .checkout {
   display: flex;
-  padding: 20px;
+  padding: 15px;
   background-color: white;
   height: max-content;
+}
+
+/* Give padding to flex container div's to give smth like a margin */
+.checkout > div {
+  padding: 10px;
 }
 .checkout__ad {
   width: 100%;
@@ -13,4 +18,7 @@
   margin-right: 10px;
   padding: 10px;
   border-bottom: 1px solid lightgray;
+}
+
+.checkout__right {
 }
