--- a/src/Home.css
+++ b/src/Home.css
@@ -31,7 +31,7 @@
   display: grid;
   position: relative;
   margin: 10px;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(16%, 1fr));
   grid-auto-rows: minmax(200px, 2fr);
   grid-gap: 10px;
   align-items: center;
@@ -59,7 +59,7 @@
   grid-row: span 2; 
 } */
 
-.wrapper div:nth-child(12) {
+.wrapper div:nth-child(15) {
   grid-column: span 2;
   grid-row: span 2;
 }
