--- a/src/Product.css
+++ b/src/Product.css
@@ -31,10 +31,21 @@
 }
 
 .product__info {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   margin-bottom: 15px;
 }
 
+.product__info > p {
+  padding: 5px;
+  padding-bottom: 0px;
+}
+
+.product__info > div {
+  padding: 5px;
+  padding-bottom: 0px;
+}
 .product__price {
   margin-top: 5px;
   margin-bottom: 0;
@@ -49,11 +60,17 @@
   color: #111;
 }
 
+.product > button:hover {
+  background-color: #c39d3d;
+  box-shadow: 0px 0px 48px -23px rgba(0, 0, 0, 0.7) inset;
+  -webkit-box-shadow: 0px 0px 48px -23px rgba(0, 0, 0, 0.7) inset;
+  -moz-box-shadow: 0px 0px 48px -23px rgba(0, 0, 0, 0.7) inset;
+}
+
 .product__title {
   font-size: 14px;
   text-overflow: ellipsis; /* will make [...] at the end */
-  width: 30ch; /* change to your preferences */
-
+  width: 100%; /* change to your preferences */
   white-space: nowrap; /* paragraph to one line */
   overflow: hidden; /* older browsers */
   margin-bottom: 0;
