--- a/src/CheckoutProduct.css
+++ b/src/CheckoutProduct.css
@@ -30,3 +30,19 @@
   font-size: 17px;
   font-weight: 800;
 }
+
+.checkoutProduct__info > button:hover {
+  background-color: #c39d3d;
+  box-shadow: 0px 0px 48px -23px rgba(0, 0, 0, 0.7) inset;
+  -webkit-box-shadow: 0px 0px 48px -23px rgba(0, 0, 0, 0.7) inset;
+  -moz-box-shadow: 0px 0px 48px -23px rgba(0, 0, 0, 0.7) inset;
+}
+
+.checkoutProduct__info > button:active {
+  box-shadow: 0px 0px 48px -23px rgba(0, 0, 0, 0.7) inset,
+    0px 0px 5px 0px rgba(0, 0, 0, 0.94);
+  -webkit-box-shadow: 0px 0px 48px -23px rgba(0, 0, 0, 0.7) inset,
+    0px 0px 5px 0px rgba(0, 0, 0, 0.94);
+  -moz-box-shadow: 0px 0px 48px -23px rgba(0, 0, 0, 0.7) inset,
+    0px 0px 5px 0px rgba(0, 0, 0, 0.94);
+}
