--- a/src/static/styles/Header.css
+++ b/src/static/styles/Header.css
@@ -37,6 +37,7 @@
 
 .header__nav {
   display: flex;
+  align-items: center;
   justify-content: space-evenly;
 }
 
@@ -58,6 +59,8 @@
 }
 
 .header__option-basket {
+  margin: 0px 8px;
+  padding: 2px;
   display: flex;
   align-items: center;
   color: white;
@@ -65,5 +68,8 @@
 
 .header__basket-count {
   margin-left: 5px;
-  margin-right: 10px;
+}
+
+.header__option-basket:hover {
+  color: rgb(183, 183, 183);
 }
